--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
           cargo build --release --target-dir target/${{ matrix.target-dir }}
 
       - name: Package binary
+        shell: bash
         run: |
           cd target/${{ matrix.target-dir }}/release
           if [ "${{ matrix.os }}" == "windows-latest" ]; then
