--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.98"
 clap = { version = "4.5.42", features = ["derive"] }
 directories = "6.0.0"
 serde = { version = "1.0.219", features = ["derive"] }
+strum_macros = "0.27.2"
 tabwriter = "1.4.1"
 toml = "0.9.5"
 which = "8.0.0"
